Minor fixes, new article

--- a/_category/index.html
+++ b/_category/index.html
@@ -2,6 +2,7 @@
 title: "Categories"
 permalink: /categories
 layout: default
+excerpt: "Newsie McNewsface - The Best News From The Best Country In The United States"
 ---
 <main id="archives">
 {% for category in site.categories %}
