--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 title: Home
 layout: default
-excerpt: "Newsie McNewsface"
+excerpt: "Newsie McNewsface - The Best News From The Best Country In The United States"
 ---
 {% include post_count.html %}
 {% include most_recent.html %}
